tinker font name

--- a/setup-appearance.org
+++ b/setup-appearance.org
@@ -68,7 +68,7 @@ Now, let's put the above to work.
 #+BEGIN_SRC emacs-lisp
   (progn
     (setq
-      sf/font-name "Fira Code Light"
+      sf/font-name "Fira Code"
       sf/font-size 12)
     (sf/font-update))
 #+END_SRC
