--- a/setup-elfeed.org
+++ b/setup-elfeed.org
@@ -119,13 +119,13 @@
            ("http://planet.emacsen.org/atom.xml" emacs)
            ("http://oremacs.com/atom.xml" emacs)
            ("http://pragmaticemacs.com/feed/" emacs)
-           ("http://mbork.pl/?action=rss" emacs )
-           ("http://www.howardism.org/index.xml" emacs blog )
-           ("http://feeds.feedburner.com/TheKitchinResearchGroup" emacs )
-           ("http://sachachua.com/blog/feed" emacs blog )
+           ("http://mbork.pl/?action=rss" emacs)
+           ("http://www.howardism.org/index.xml" emacs blog)
+           ("http://feeds.feedburner.com/TheKitchinResearchGroup" emacs)
+           ("http://sachachua.com/blog/feed" emacs blog)
            ("http://blog.aaronbieber.com/feed.xml" emacs blog )
-           ("https://www.masteringemacs.org/feed" emacs )
-           ("https://karl-voit.at/feeds/lazyblorg-all.atom_1.0.links-and-content.xml" emacs)
+           ("https://www.masteringemacs.org/feed" emacs)
+           ("https://karl-voit.at/feeds/lazyblorg-all.atom_1.0.links-and-teaser.xml" emacs blog)
            ("http://irreal.org/blog/?feed=rss2" emacs)
            ("https://changelog.complete.org/feed" emacs blog)
            ;; amusement
