--- a/README.org
+++ b/README.org
@@ -36,7 +36,6 @@ You can keep up to date by using the =make update= target.  This will do a few t
 - Do a =git pull= to pull in the latest changes to /emacs-forge/.
 - Run the function =forge/update-packages= to update the installed Emacs packages.
 
-
 ** Configuration
 
 There are a couple directories you use to store any personal or site-specific configuration for
@@ -45,3 +44,29 @@ There are a couple directories you use to store any personal or site-specific co
 - *~/.emacs.d/preload* (=forge-preload-dir)  Files to preload before loading forge modules.
 - *~/.emacs.d/site* (=forge-site-dir=)
 - *~/.emacs.d/user*  (=forge-personal-dir=)
+
+** Inspiration
+
+There are many elements of this configuration that are drawn from other users' configurations
+online.  Below is a list of only some of those configurations that caught my eye.
+
+- [[http://sachachua.com/blog/][Sacha Chua]]'s [[http://sachac.github.io/.emacs.d/Sacha.html][emacs configuration]]
+- [[http://doc.norang.ca/org-mode.html][Bernt Hansen (norang.ca) Org Mode]] (Organize Your Life in Plain Text)
+- [[http://eschulte.github.io/emacs24-starter-kit/][Emacs Starter Kit]]
+- [[http://www.wisdomandwonder.com/wordpress/wp-content/uploads/2014/03/C3F.html][Creation and conservation of computer files]], and later [[https://github.com/grettke/home/blob/master/ALEC.org][ALEC]]
+- [[http://kitchingroup.cheme.cmu.edu/blog/][John Kitchin]]'s [[https://github.com/jkitchin/scimax][emacs configuration]]
+- [[http://www.djcbsoftware.nl/dot-emacs.html][DJCB]]
+- [[https://github.com/bzg/dotemacs/blob/master/emacs.el][Bastien Guerry]]
+- [[https://github.com/larstvei/dot-emacs][Lars Tveito]]
+- [[https://github.com/purcell/emacs.d][Steve Purcell]]
+- [[http://zeekat.nl/articles/making-emacs-work-for-me.html][Making Emacs work for me]]
+- [[https://github.com/howardabrams/dot-files][Howard Abrams]]
+- [[https://github.com/jd/emacs.d][Julien Danmmjou]]
+- [[https://github.com/jwiegley/dot-emacs][John Wiegley]]
+- [[https://github.com/joedicastro/dotfiles/tree/master/emacs][Joe Di Castro]]
+- [[http://org.rix.si/][Ryan Rix]]'s [[http://doc.rix.si/cce/cce.html][Complete Computing Environment]] (formerly [[http://doc.rix.si/org/fsem.html][Hardcore Freestyle Emacs]] [[http://fort.kickass.systems:10082/cgit/personal/rrix/pub/fsem.git/tree/fsem.org][org source]])
+- [[https://github.com/abelardojarab/emacs-config][Abelardo Jara-Berrocal]]
+- [[https://writequit.org][Lee Hinman]]'s [[https://writequit.org/eos/eos.html][Emacs Operating System]] (see https://github.com/dakrone/eos)
+- [[http://karl-voit.at/][Karl Voit]]'s [[https://github.com/novoid/dot-emacs][dot-emacs]]
+- [[https://github.com/DamienCassou/emacs.d/blob/master/init.el][Damien Cassou]]
+- [[https://github.com/hlissner][Henrik Lissner]] [[https://github.com/hlissner/doom-emacs][Doom Emacs]]
