--- a/README.org
+++ b/README.org
@@ -162,6 +162,15 @@ For all changes, see the upstream Org Mode [[https://orgmode.org/Changes.html][C
   (require 'org-tempo)
   #+END_SRC
 
+*** Utilities
+
+**** Google Maps
+
+** Resources
+
+*** Emacs Calc
+- [[https://github.com/ahyatt/emacs-calc-tutorials][Emacs Calc Tutorials]]
+- [[https://www.gnu.org/software/emacs/refcards/pdf/calccard.pdf][Emacs Calc Reference Card]]
 ** Inspiration
 
 There are many elements of this configuration that are drawn from other users' configurations
